[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "china-trending-mcp"
version = "0.1.0"
description = "MCP Server for Chinese social media trending topics — Weibo hot search and Zhihu hot list"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "521w" }
]
keywords = ["mcp", "weibo", "zhihu", "trending", "china", "social-media", "news"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
china-trending-mcp = "china_trending_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["china_trending_mcp"]